<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beam Energy Calculator</string>
    <string name="action_settings">k</string>
    <string name="edit_message">Linac Imbalence</string>
    <string name="edit_message2">Wien Angle</string>
    <string name="edit_message3">Injector Energy</string>
    <string name="edit_message5">Pass Number</string>
    <string name="edit_message4">Estimate</string>
    <string name="button_send">Calculate Energy</string>
    <string name="button_send2">Calculate Beam Energy</string>
    <string name="button_send3">Total Spin Precession Hall C</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dynamic_string">Hello</string>
    <string name="title_activity_display_message">Table of Calculations</string>
    <string name="NewApi">NewApi</string>
    <string name="hello_world">Hello world!</string>

</resources>