<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

 <EditText
     android:id="@+id/edit_message3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/edit_message"
     android:layout_alignParentTop="true"
     android:layout_marginTop="36dp"
     android:ems="10"
     android:hint="@string/edit_message3" />

 <EditText
     android:id="@+id/edit_message"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/edit_message2"
     android:layout_below="@+id/edit_message3"
     android:layout_marginTop="25dp"
     android:ems="10"
     android:hint="@string/edit_message" />

 <EditText
     android:id="@+id/edit_message2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/edit_message"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="29dp"
     android:ems="10"
     android:hint="@string/edit_message2" />
 
 <EditText
     android:id="@+id/edit_message5"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/edit_message2"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="29dp"
     android:ems="10"
     android:hint="@string/edit_message5" />
 
 <EditText
     android:id="@+id/edit_message4"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/edit_message5"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="29dp"
     android:ems="10"
     android:hint="@string/edit_message4" />

 <Button
     android:id="@+id/button_send2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/edit_message4"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="30dp"
     android:onClick="sendMessage"
     android:text="@string/button_send" />
 
</RelativeLayout>